Added logic for searchTransactions endpoint, still need to test
